Chore: use state for isCollapsed to prevent collapsing during refresh + on initialization

--- a/src/components/ContentSidebar/ContentSidebar.scss
+++ b/src/components/ContentSidebar/ContentSidebar.scss
@@ -1,19 +1,29 @@
 @import '../variables';
 
-.be.bcs {
-    background-color: $haze;
-    display: flex;
-    max-width: 400px;
-    min-width: 60px;
-    width: auto;
-}
+$sidebarWidth: 400px;
 
-.be .bcs-loading {
-    align-items: center;
-    display: flex;
-    flex: 1;
-    font-size: 0;
-    margin: 0 auto;
-    white-space: nowrap;
-    width: 10px;
+.be {
+    &.bcs {
+        background-color: $haze;
+        display: flex;
+        max-width: $sidebarWidth;
+        min-width: 60px;
+        width: auto;
+    }
+
+    .bcs-loading {
+        align-items: center;
+        display: flex;
+        flex: 1;
+        font-size: 0;
+        margin: 0 auto;
+        white-space: nowrap;
+        width: 10px;
+    }
+
+    &.bcs-is-open {
+        .bcs-loading {
+            width: $sidebarWidth;
+        }
+    }
 }
